--- a/zabbix/Server/docker-compose.yml
+++ b/zabbix/Server/docker-compose.yml
@@ -6,7 +6,7 @@ networks:
 
 services:
   postgres-server:
-    image: postgres:latest
+    image: postgres:13
     restart: always
     networks:
       - network-zabbix
