--- a/python_app/Dockerfile
+++ b/python_app/Dockerfile
@@ -2,6 +2,9 @@ FROM python:3.6.8
 
 WORKDIR /app
 
+ARG VAR1
+ENV VAR1 ${VAR1}
+
 COPY requirements.txt ./
 RUN pip install --target /app --no-cache-dir -r requirements.txt
 
