--- a/jmeter/docker-compose.yml
+++ b/jmeter/docker-compose.yml
@@ -8,7 +8,7 @@ services:
     environment:
       JVM_ARGS: -Xms10240m -Xmx10240m
     extra_hosts:
-      - rancher-dev2.store-plus.atbmarket.com:10.0.9.39
+      - rancher-dev2.example.com:10.0.9.39
     command: "--nongui --testfile test1.jmx --logfile result.jtl"
 
 
