--- a/php_mysql/zone_tmpl/default.conf
+++ b/php_mysql/zone_tmpl/default.conf
@@ -11,7 +11,7 @@ server {
    ssl_ciphers         HIGH:!aNULL:!MD5;
 
 
-   root /var/www/www.atbmarket.com/public;
+   root /var/www/example.com/public;
    index index.php;
 
    location / {
