--- a/python_app/docker-compose.yml
+++ b/python_app/docker-compose.yml
@@ -6,5 +6,7 @@ services:
       container_name: myapp
       working_dir: /app
       restart: always
+      environment:
+        - VAR1=xxxxxxxxxx
       volumes:
         - /etc/localtime:/etc/localtime:ro
