--- a/EFK8/docker-compose.yml
+++ b/EFK8/docker-compose.yml
@@ -1,77 +1,36 @@
-version: '3.2'
-
 services:
-  elasticsearch:
-    build:
-      context: elasticsearch/
-      args:
-        ELK_VERSION: $ELK_VERSION
-    restart: always
-    volumes:
-      - ./elasticsearch/config/elasticsearch.yml:/usr/share/elasticsearch/config/elasticsearch.yml:ro
-      - ./data/elasticsearch:/usr/share/elasticsearch/data
+  fluentd:
+    build: ./fluentd
+    container_name: fluentd
+    environment:
+       no_proxy: "elasticsearch,kibana"
+    links:
+      - "elasticsearch"
     ports:
-      - "9200:9200"
-#      - "9300:9300"
+      - "24224:24224"
+      - "24224:24224/udp"
+  elasticsearch:
+    image: docker.elastic.co/elasticsearch/elasticsearch:${ELASTIC_VERSION}
+    container_name: elasticsearch
+    volumes:
+      - ./data/elasticsearch:/usr/share/elasticsearch/data
+    environment:
+      - discovery.type=single-node
+      - xpack.security.enabled=false
+      - xpack.security.enrollment.enabled=true
     healthcheck:
       test: ["CMD-SHELL", "curl -s http://localhost:9200 >/dev/null || exit 1"]
       interval: 20s
       timeout: 10s
       retries: 5
-    mem_limit: 1g
-    environment:
-      discovery.type: single-node                  # single-node cluster
-      ES_JAVA_OPTS: "-Xms512m -Xmx512m"
-    networks:
-      - elk
-
-  fluentd:
-    build: ./fluent
-    container_name: fluentd
-    volumes:
-      - ./fluent/config:/fluentd/etc
+    expose:
+      - "9200"
     ports:
-      - "24224:24224"
-      - "24224:24224/udp"
-    depends_on:
-      elasticsearch:
-        condition: service_healthy
-    networks:
-      - elk
-
-  # fluent-bit:
-  #   image: fluent/fluent-bit:1.8
-  #   command:
-  #     - /fluent-bit/bin/fluent-bit
-  #     - --config=/etc/fluent-bit/fluent-bit.conf
-  #   environment:
-  #     - FLB_ES_HOST=elasticsearch
-  #     - FLB_ES_PORT=9200
-  #   ports:
-  #     #- 2020:2020
-  #     - 24224:24224
-  #   volumes:
-  #     - ./conf/:/etc/fluent-bit/:ro
-
+      - "9200:9200"
   kibana:
-    build:
-      context: kibana/
-      args:
-        ELK_VERSION: $ELK_VERSION
-    restart: always
-    environment:
-#      - ELASTICSEARCH_HOSTS=http://elasticsearch:9200
-      - SERVER_HEAP_SIZE=512mm
-    volumes:
-      - ./kibana/config/kibana.yml:/usr/share/kibana/config/kibana.yml:ro
+    image: docker.elastic.co/kibana/kibana:${ELASTIC_VERSION}
+    container_name: kibana
+    links:
+      - "elasticsearch"
     ports:
       - "5601:5601"
-    networks:
-      - elk
-    depends_on:
-      - elasticsearch
-
-networks:
-  elk:
-    driver: bridge
-
