--- a/minio/_nginx/minio.example.com.conf
+++ b/minio/_nginx/minio.example.com.conf
@@ -1,31 +1,14 @@
-server {
-  listen 80;
-  server_name minio.example.com;
+upstream minio_s3 {
+   server localhost:9000;
+}
 
-  access_log /var/log/nginx/minio.access.log;
-  error_log  /var/log/nginx/minio.error.log error;
-
-  keepalive_timeout 30;
-  keepalive_requests 100;
-  reset_timedout_connection on;
-  client_body_timeout 10;
-  send_timeout 2;
-  add_header X-Frame-Options "SAMEORIGIN";
-
-  location / {
-    proxy_pass http://localhost:8921;
-    proxy_set_header Host $host;
-    proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
-    proxy_set_header X-Real-IP $remote_addr;
-    proxy_connect_timeout       600;
-    proxy_send_timeout          600;
-    proxy_read_timeout          600;
-    send_timeout                600;
-  }
+upstream minio_console {
+   server localhost:9001;
 }
 
 server {
-  listen 8923;
+  listen 80;
+  listen 443 ssl;
   server_name minio.example.com;
 
   ignore_invalid_headers off;
@@ -42,18 +25,58 @@ server {
   send_timeout 2;
   add_header X-Frame-Options "SAMEORIGIN";
 
+  ssl_certificate /etc/ssl/minio.example.com.crt;
+  ssl_certificate_key /etc/ssl/minio.example.com.key;
+  ssl_session_timeout 1d;
+  ssl_session_cache shared:SSL:50m;
+  ssl_session_tickets off;
+  ssl_dhparam /etc/ssl/certs/dhparam.pem;
+  ssl_protocols TLSv1 TLSv1.1 TLSv1.2;
+  ssl_ciphers 'ECDHE-ECDSA-CHACHA20-POLY1305:ECDHE-RSA-CHACHA20-POLY1305:ECDHE-ECDSA-AES128-GCM-SHA256:ECDHE-RSA-AES128-GCM-SHA256:ECDHE-ECDSA-AES256-GCM-SHA384:ECDHE-RSA-AES256-GCM-SHA384:DHE-RSA-AES128-GCM-SHA256:DHE-RSA-AES256-GCM-SHA384:ECDHE-ECDSA-AES128-SHA256:ECDHE-RSA-AES128-SHA256:ECDHE-ECDSA-AES128-SHA:ECDHE-RSA-AES256-SHA384:ECDHE-RSA-AES128-SHA:ECDHE-ECDSA-AES256-SHA384:ECDHE-ECDSA-AES256-SHA:ECDHE-RSA-AES256-SHA:DHE-RSA-AES128-SHA256:DHE-RSA-AES128-SHA:DHE-RSA-AES256-SHA256:DHE-RSA-AES256-SHA:ECDHE-ECDSA-DES-CBC3-SHA:ECDHE-RSA-DES-CBC3-SHA:EDH-RSA-DES-CBC3-SHA:AES128-GCM-SHA256:AES256-GCM-SHA384:AES128-SHA256:AES256-SHA256:AES128-SHA:AES256-SHA:DES-CBC3-SHA:!DSS';
+  ssl_prefer_server_ciphers on;
+  add_header Strict-Transport-Security "max-age=63072000; includeSubdomains; preload ";
+  
+  proxy_request_buffering off;
+
   location / {
-    proxy_set_header X-Real-IP $remote_addr;
-    proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
-    proxy_set_header X-Forwarded-Proto $scheme;
-    proxy_set_header Host $http_host;
+      proxy_set_header Host $http_host;
+      proxy_set_header X-Real-IP $remote_addr;
+      proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
+      proxy_set_header X-Forwarded-Proto $scheme;
 
-    proxy_connect_timeout 300;
-    proxy_http_version 1.1;
-    proxy_set_header Connection "";
-    chunked_transfer_encoding off;
-    proxy_pass http://localhost:8922;
-  }
+      proxy_connect_timeout 300;
+      # Default is HTTP/1, keepalive is only enabled in HTTP/1.1
+      proxy_http_version 1.1;
+      proxy_set_header Connection "";
+      chunked_transfer_encoding off;
 
+      proxy_pass http://minio_s3; # This uses the upstream directive definition to load balance
+   }
+
+   location /minio/ui/ {
+      rewrite ^/minio/ui/(.*) /$1 break;
+      proxy_set_header Host $http_host;
+      proxy_set_header X-Real-IP $remote_addr;
+      proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
+      proxy_set_header X-Forwarded-Proto $scheme;
+      proxy_set_header X-NginX-Proxy true;
+
+      # This is necessary to pass the correct IP to be hashed
+      real_ip_header X-Real-IP;
+
+      proxy_connect_timeout 300;
+
+      # To support websockets in MinIO versions released after January 2023
+      proxy_http_version 1.1;
+      proxy_set_header Upgrade $http_upgrade;
+      proxy_set_header Connection "upgrade";
+      # Some environments may encounter CORS errors (Kubernetes + Nginx Ingress)
+      # Uncomment the following line to set the Origin request to an empty string
+      # proxy_set_header Origin '';
+
+      chunked_transfer_encoding off;
+
+      proxy_pass http://minio_console; # This uses the upstream directive definition to load balance
+   }
 }
 
